--- a/style.css
+++ b/style.css
@@ -66,3 +66,21 @@ button:hover {
     margin-top: 20px;
     color: #007BFF;
 }
+
+.top-left {
+    position: absolute;
+    top: 10px; /* Adjust as needed to control the vertical position */
+    left: 10px; /* Adjust as needed to control the horizontal position */
+}
+
+#score-container {
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: 900;
+    color: #fff;
+    padding: 8px;
+    background-color: #72b1f5;
+    border-style: solid;
+    border-color: #333;
+    border-width: 3px;
+    border-radius: 20px;
+}
