--- a/Styles/start.css
+++ b/Styles/start.css
@@ -1,17 +1,19 @@
 /* styles.css */
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
     margin: 0;
     padding: 0;
+    background: url('/Images/background2.jpg') no-repeat center center fixed;
+    background-size: cover;
+    font-family: Arial, sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+    overflow: hidden;
 }
 
 .start-container {
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.8); /* Add transparency to make text more readable */
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     padding: 20px;
