--- a/Styles/start.css
+++ b/Styles/start.css
@@ -2,7 +2,7 @@
 body {
     margin: 0;
     padding: 0;
-    background: url('/Images/background.jpg') no-repeat center center fixed;
+    background: url('../Images/background.jpg') no-repeat center center fixed;
     background-size: cover;
     font-family: Arial, sans-serif;
     display: flex;
