--- a/Styles/menuFag.css
+++ b/Styles/menuFag.css
@@ -2,6 +2,7 @@
 
 body {
     font-family: Arial, sans-serif;
+    background: url('../Images/menufag.jpeg') no-repeat center center fixed;
     background-color: #f0f0f0;
     margin: 0;
     padding: 0;
