--- a/Styles/minQuiz.css
+++ b/Styles/minQuiz.css
@@ -85,6 +85,27 @@ button:hover {
     right: 10px; /* Adjust as needed to control the horizontal position */
 }
 
+#highscore-container {
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-weight: 900;
+  color: #fff;
+  padding: 8px;
+  background-color: #007BFF;
+  border-style: solid;
+  border-color: #333;
+  border-width: 3px;
+  border-radius: 20px;
+  box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+
+  position: absolute;
+  bottom: 10px; /* Adjust as needed to control the vertical position */
+  right: 10px; /* Adjust as needed to control the horizontal position */
+}
+
+
+
+
+
 
 
 #back-button {
